--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -33,7 +33,7 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
 .table table a{color: black; font-size:0.7rem; text-decoration: none;}
 .table table tr th{padding: 0.7rem;font-size: 0.7rem;color: #0074E9;}
 .table table tr td{border:1px solid #ccc;padding: 0.7rem;font-size: 0.7rem; border-right:none;border-left:none;}
-.search_box{border:1px solid #ccc;width: auto;margin-left: auto;}
+.search_box{display: contents; width: auto; margin-left: auto;}
 .search_box2{display: contents; border:1px solid #fff;width: auto;margin-left: auto;}
 .customer table tbody tr:hover{background: #e8e8e8;}
 
@@ -61,7 +61,7 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
 .search_area ul{display: flex; justify-content: space-between;}
 .search_area input[type=button],input[type=submit]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
 .search_area input[type=button]:hover,input[type=submit]:hover{background: #0a62f2;}
-.search_area input[type=text]{padding: 0.5rem;width: 15rem;border: none;}
+.search_area input[type=text]{padding: 0.5rem;width: 15rem;border: 1px solid #ccc;}
 .search_area input.sbm{padding: 0.8rem 1.5rem;}
 
 
