--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -18,7 +18,7 @@ footer{position: relative;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
 .top .menu ul {list-style: none;padding: 0;margin: 0;display:inline-block;}
 .top .menu ul li {float:left;overflow: hidden;text-align: center;line-height: 45px;boder: 1px solid red;}
 .top .menu ul li a {position: relative;display: block;width: 8rem;height: 45px;color: #FFF;font-family:;font-size: 12px;letter-spacing: 1px;text-transform: uppercase;text-decoration: none;cursor: pointer;}
-.top .menu ul li a span {position: absolute;left: 0;width: 8rem;}
+.top .menu ul li a span {position: absolute;left: 0;width: 8rem;font-weight: 500;}
 .top .menu ul li a span.over {top: -45px;background: #fff;color: #3079F3;font-weight: 900;}
 
 
@@ -58,12 +58,15 @@ footer{position: relative;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
 
 
 /* board */
+input[type=button],input[type=submit]{cursor: pointer;}
 .search_area ul{display: flex; justify-content: end;}
 .search_area input[type=button],input[type=submit]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
 .search_area input[type=button]:hover,input[type=submit]:hover{background: #0a62f2;}
 .search_area input[type=text]{padding: 0.5rem;width: 15rem;border: 1px solid #ccc;}
 .search_area input.sbm{padding: 0.8rem 1.5rem;}
 .search_area h3{margin-bottom: 0.5rem;}
+.search_area_for_btn ul{display: flex; justify-content: space-between;}
+
 
 /* board_view */
 .board_view {width:80%; margin: auto; margin-bottom: 2rem;}
@@ -72,14 +75,14 @@ footer{position: relative;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
 .board_view .title ul{display: flex;justify-content: space-between;vertical-align: middle;}
 .board_view .title ul li{padding: 0.3rem;font-size: 0.7rem;}
 .board_view .title ul li#title{min-width: 80%;font-size: 0.8rem;}
-.board_view .content{line-height:1.1rem; overflow: auto; min-height: 20rem;font-size: 0.7rem; padding: 0.5rem;}
+.board_view .content{line-height:1rem; overflow: auto; min-height: 20rem;font-size: 0.7rem; padding: 0.5rem;}
 .board_view .date{margin: 1rem;text-align: right;}
 .board_view .date ul{display: flex;font-size: 0.7rem;width: fit-content;margin-left: auto;}
 .board_view .date ul li{padding-left: 1rem;}
 .board_view input[type=button]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
 .board_view input[type=button]:hover{background: #0a62f2;}
 .customer hr{position: relative;border: none;background: #ccc;height: 1px;}
-.search_area_for_btn ul{display: flex; justify-content: space-between;}
+.noti_view{line-height:1rem;}
 
 
 /* EMPLOYEE_REGISTER */
@@ -220,6 +223,7 @@ select{height: 40px;}
 .write_area {width: 80%;}
 .emp_reg_form #check, #check2 {font-size: 0.6rem;}
 .ui-datepicker select.ui-datepicker-month {height: auto;}
+.top .menu ul li a span {width: 6rem;}
 }
 
 
