--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -16,8 +16,8 @@ footer{position: relative;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
 .top .top-bar a:hover {text-decoration: underline;}
 .top .menu {height: 44.5px;background: #4285f4;text-align:center;margin-top:1rem;}
 .top .menu ul {list-style: none;padding: 0;margin: 0;display:inline-block;}
-.top .menu ul li {float:left;overflow: hidden;text-align: center;line-height: 45px;boder: 1px solid red;}
-.top .menu ul li a {position: relative;display: block;width: 8rem;height: 45px;color: #FFF;font-family:;font-size: 12px;letter-spacing: 1px;text-transform: uppercase;text-decoration: none;cursor: pointer;}
+.top .menu ul li {float:left;overflow: hidden;text-align: center;line-height: 45px;}
+.top .menu ul li a {position: relative;display: block;width: 8rem;height: 45px;color: #FFF;font-size: 12px;letter-spacing: 1px;text-transform: uppercase;text-decoration: none;cursor: pointer;}
 .top .menu ul li a span {position: absolute;left: 0;width: 8rem;font-weight: 500;}
 .top .menu ul li a span.over {top: -45px;background: #fff;color: #3079F3;font-weight: 900;}
 
